<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DInScan</string>
    <string name="detect_devices">Detect DAQ devices</string>
    <string name="connect_device">Connect</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="status_text">&quot;Status: &quot;</string>
    <string name="empty"></string>
    <string name="trigType_text">Trigger Type:</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="highChan_text">High Channel:</string>
    <string name="samplesPerPort_text">Samples per Port:</string>
    <string name="defaultNumSamples_text">10000</string>
    <string name="rate_text">Rate:</string>
    <string name="net_detect_text">Detect</string>
    <string name="cancel_text">Cancel</string>
    <string name="ip_addr_text">IP address or host name:</string>
    <string name="port_text">Port:</string>
    <string name="continuous_text">Continuous:</string>
    <string name="extclock_text">External Clock:</string>
    <string name="exttrig_text">External Trigger:</string>
    <string name="scandata_text">Scan Data:</string>

</resources>