<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DInScanActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detect_devices" />

        <Spinner
            android:id="@+id/spinner_daqDev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect_device"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect_device"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_errInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#165B12" 
            android:paddingBottom="7dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC"
        android:fadeScrollbars="false" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="#FCFCFC"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinner_port"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/textView_digitalPort" />

            <EditText
                android:id="@+id/editText_samplesPerPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinner_port"
                android:layout_alignRight="@+id/spinner_port"
                android:layout_below="@id/spinner_port"
                android:ems="10"
                android:inputType="number"
                android:text="@string/defaultNumSamples_text" />

            <EditText
                android:id="@+id/editText_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_samplesPerPort"
                android:layout_alignRight="@id/editText_samplesPerPort"
                android:layout_below="@id/editText_samplesPerPort"
                android:ems="10"
                android:inputType="numberDecimal" />
            
            <CheckBox
                android:id="@+id/checkBox_continuous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_rate"
                android:layout_toRightOf="@+id/textView_trigType" />
            
            <CheckBox
                android:id="@+id/checkBox_extclock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox_continuous"
                android:layout_toRightOf="@+id/textView_trigType" />
            
            <CheckBox
                android:id="@+id/checkBox_exttrig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox_extclock"
                android:layout_toRightOf="@+id/textView_trigType" />

            <Spinner
                android:id="@+id/spinner_trigType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_rate"
                android:layout_alignRight="@id/editText_rate"
                android:layout_below="@id/checkBox_exttrig" />

            <TextView
                android:id="@+id/textView_trigType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinner_trigType"
                android:layout_below="@id/editText_rate"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/spinner_port"
                android:text="@string/trigType_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <ToggleButton
                android:id="@+id/toggleButton_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_trigType"
                android:layout_alignRight="@id/spinner_trigType"
                android:layout_below="@id/spinner_trigType"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:textOff="@string/start_button"
                android:textOn="@string/stop_button" />

            <TextView
                android:id="@+id/textView_digitalPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/spinner_port"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/port_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_samplesPerChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/editText_samplesPerPort"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/editText_samplesPerPort"
                android:text="@string/samplesPerPort_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/editText_rate"
                android:layout_alignBottom="@id/editText_rate"
                android:layout_toLeftOf="@id/spinner_port"
                android:text="@string/rate_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <LinearLayout
                android:id="@+id/layout_scanData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/toggleButton_start"
                android:layout_alignRight="@id/toggleButton_start"
                android:layout_below="@id/toggleButton_start"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_scanChans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView_samplesPerChan"
                android:layout_alignRight="@id/textView_trigType"
                android:layout_below="@id/toggleButton_start"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/TextView_continuous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                android:layout_alignTop="@+id/checkBox_continuous"
                android:layout_toLeftOf="@+id/checkBox_continuous"
                android:text="@string/continuous_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />
           

            <TextView
                android:id="@+id/TextView_extClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                android:layout_alignTop="@+id/checkBox_extclock"
                android:layout_toLeftOf="@+id/checkBox_extclock"
                android:text="@string/extclock_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />
            
             <TextView
                 android:id="@+id/TextView_extTrig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:layout_marginTop="13dp"
                 android:layout_alignTop="@+id/checkBox_exttrig"
                 android:layout_toLeftOf="@+id/checkBox_exttrig"
                 android:text="@string/exttrig_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#0E139F" />
             
             <EditText
                 android:id="@+id/editText_scanData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@id/toggleButton_start"
                 android:layout_alignRight="@id/toggleButton_start"
                 android:layout_below="@id/toggleButton_start"
                 android:layout_marginTop="5dp"
                 android:ems="10"
                 android:focusableInTouchMode="false"
                 android:inputType="numberDecimal" >
	
	            <requestFocus />
	        </EditText>
	        
              <TextView
                  android:id="@+id/textView_scanData"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignTop="@id/editText_scanData"
                  android:layout_below="@id/editText_rate"
                  android:layout_marginTop="10dp"
                  android:layout_toLeftOf="@id/spinner_port"
                  android:text="@string/scandata_text"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:textColor="#0E139F"
                  android:paddingBottom="30dp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>